@@ -29,6 +29,7 @@ ChangeLog
 [+] * Improved MMS notifications encoding.
 [+] * Allow to specify MMS notification class.
 [+] * Implemented decoding of MMS notification (bug #1100).
+[+] * SMSD now properly groups multipart messages together.
     
 20100106 - 1.27.90
 
